src/main/java/com/example/real/dto/error/ErrorArticlesText.java
package com.example.real.dto.error;

import lombok.Data;

@Data
public class ErrorArticlesText {
    private ErrorArticles errors;
}
